<?xml version="1.0" encoding="utf-8"?>
<menu android:id="@+id/CatalogSortingMenu"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/CatalogSortingMenu_Popularity"
        android:title="@string/sortingMenu_popularity" />

    <item
        android:id="@+id/CatalogSortingMenu_Likes"
        android:title="@string/sortingMenu_likes" />

    <item
        android:id="@+id/CatalogSortingMenu_RecentUpdates"
        android:title="@string/sortingMenu_recent_updates" />

    <item
        android:id="@+id/CatalogSortingMenu_Novelty"
        android:title="@string/sortingMenu_novelty" />

    <item
        android:id="@+id/CatalogSortingMenu_Views"
        android:title="@string/sortingMenu_views" />

    <item
        android:id="@+id/SortingMenu_ChapterCount"
        android:title="@string/sortingMenu_chapter_count" />

    <item
        android:id="@+id/SortingMenu_Random"
        android:title="@string/sortingMenu_random" />
</menu>