<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomNavigation"
    app:startDestination="@+id/bottomNavigation_catalog">

    <fragment
        android:id="@+id/bottomNavigation_catalog"
        android:name="com.acg.mangalive.ui.catalog.CatalogFragment"
        android:label="@string/catalog_title"
        tools:layout="@layout/fragment_catalog" />

    <fragment
        android:id="@+id/bottomNavigation_favourites"
        android:name="com.acg.mangalive.ui.favourites.FavouritesFragment"
        android:label="@string/favourites_title"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/bottomNavigation_news"
        android:name="com.acg.mangalive.ui.news.NewsFragment"
        android:label="@string/news_title"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/bottomNavigation_notifications"
        android:name="com.acg.mangalive.ui.notifications.NotificationsFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>