<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/NavGraph"
    app:startDestination="@+id/NavGraph_Catalog">

    <fragment
        android:id="@+id/NavGraph_Catalog"
        android:name="com.acg.mangalive.ui.catalog.CatalogFragment"
        android:label="@string/catalog_title"
        tools:layout="@layout/fragment_catalog" >
        <action
            android:id="@+id/action_NavGraph_Catalog_to_NavGraph_Favourites"
            app:destination="@id/NavGraph_Favourites" />
        <action
            android:id="@+id/action_NavGraph_Catalog_to_NavGraph_News"
            app:destination="@id/NavGraph_News" />
        <action
            android:id="@+id/action_NavGraph_Catalog_to_NavGraph_Notifications"
            app:destination="@id/NavGraph_Notifications" />
    </fragment>

    <fragment
        android:id="@+id/NavGraph_Favourites"
        android:name="com.acg.mangalive.ui.favourites.FavouritesFragment"
        android:label="@string/favourites_title"
        tools:layout="@layout/fragment_favourites" >
        <action
            android:id="@+id/action_NavGraph_Favourites_to_NavGraph_Catalog"
            app:destination="@id/NavGraph_Catalog" />
        <action
            android:id="@+id/action_NavGraph_Favourites_to_NavGraph_News"
            app:destination="@id/NavGraph_News" />
        <action
            android:id="@+id/action_NavGraph_Favourites_to_NavGraph_Notifications"
            app:destination="@id/NavGraph_Notifications" />
    </fragment>

    <fragment
        android:id="@+id/NavGraph_News"
        android:name="com.acg.mangalive.ui.news.NewsFragment"
        android:label="@string/news_title"
        tools:layout="@layout/fragment_news" >
        <action
            android:id="@+id/action_NavGraph_News_to_NavGraph_Catalog"
            app:destination="@id/NavGraph_Catalog" />
        <action
            android:id="@+id/action_NavGraph_News_to_NavGraph_Favourites"
            app:destination="@id/NavGraph_Favourites" />
        <action
            android:id="@+id/action_NavGraph_News_to_NavGraph_Notifications"
            app:destination="@id/NavGraph_Notifications" />
    </fragment>

    <fragment
        android:id="@+id/NavGraph_Notifications"
        android:name="com.acg.mangalive.ui.notifications.NotificationsFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_NavGraph_Notifications_to_NavGraph_Favourites"
            app:destination="@id/NavGraph_Favourites" />
        <action
            android:id="@+id/action_NavGraph_Notifications_to_NavGraph_Catalog"
            app:destination="@id/NavGraph_Catalog" />
        <action
            android:id="@+id/action_NavGraph_Notifications_to_NavGraph_News"
            app:destination="@id/NavGraph_News" />
    </fragment>
</navigation>