<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.catalog.CatalogFragment">

    <LinearLayout
        android:id="@+id/TopAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.acg.mangalive.views.SearchView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_weight="1"
            android:text="@string/search_placeholder_text"
            app:icon="@drawable/ic_appbar_top_search" />

        <com.acg.mangalive.views.IconButton
            android:id="@+id/NotificationsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:contentDescription="@string/notifications"
            app:icon="@drawable/ic_appbar_top_notifications" />

        <com.acg.mangalive.views.IconButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/account"
            app:icon="@drawable/ic_appbar_top_account" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/surface_variant_bg"
        android:orientation="horizontal"
        android:paddingHorizontal="6dp"
        android:paddingVertical="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TopAppBar">

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_button_text"
            app:icon="@drawable/ic_panel_filter" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/SortingMenuBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:theme="@style/Theme.Mangalive.PrimaryWhite"
            app:icon="@drawable/ic_panel_drop_arrow"
            app:iconGravity="end" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/catalog"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>